--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Santa Smog</title>
   </head>
   <body>
-    <header></header>
-    <main>
-      <section id="intro">
+    <header class="container" id="main-header">
+      <img id="logo" alt="Santa Smog" src="./assets/santa-smog.svg" />
+      <h1 id="date">April,2024</h1>
+    </header>
+    <main class="container">
+      <section " id="intro">
         <p>
           I humbly beseech you to not see this platform as an avenue to get
           ‘free’ money but kindly share it with someone who will truly need it.
@@ -23,9 +27,9 @@
 
         <p>Thank you for your cooperation.</p>
         <form id="consent-form">
-          <div class="form-group">
+          <div class="form-group row">
             <input type="checkbox" id="agreement" />
-            <label for="agreement"
+            <label class="checkbox" for="agreement"
               >I agree to all the terms stated above.</label
             >
           </div>
@@ -38,25 +42,25 @@
           <div class="form-group">
             <label for="bank-list">Your Bank</label>
             <select id="bank-list">
-              <options value="">Kindly select your bank</options>
+              <option value="">Kindly select your bank</option>
             </select>
           </div>
           <div class="form-group">
             <label for="account-number">Your Account Number</label>
             <input type="text" id="account-number" />
           </div>
-          <div class="form-group">
+          <div class="form-group row">
             <input type="checkbox" id="account-name" />
-            <label for="account-name"
+            <label class="checkbox" for="account-name"
               >My name is
               <span id="user-account-name">Aremu Oluwabgbamila</span></label
             >
           </div>
-          <button disabled="disabled">Proceed</button>
+          <button>Proceed</button>
         </form>
       </section>
     </main>
-    <footer>
+    <footer class="container">
       <p>Built with love in Ibadan</p>
     </footer>
   </body>
