feat: typography and header

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -11,8 +11,11 @@
       <img id="logo" alt="Santa Smog" src="./assets/santa-smog.svg" />
       <h1 id="date">April,2024</h1>
     </header>
+    <section id="banner">
+      <h2>5,000NGN for 10 PEOPLE</h2>
+    </section>
     <main class="container">
-      <section " id="intro">
+      <section data-visible="true" id="intro">
         <p>
           I humbly beseech you to not see this platform as an avenue to get
           ‘free’ money but kindly share it with someone who will truly need it.
@@ -37,7 +40,7 @@
         </form>
       </section>
 
-      <section id="payment">
+      <section data-visible="false" id="payment">
         <form id="bank-info-form">
           <div class="form-group">
             <label for="bank-list">Your Bank</label>
