--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -7,72 +7,88 @@
     <title>Santa Smog</title>
   </head>
   <body>
-    <header class="container" id="main-header">
-      <img id="logo" alt="Santa Smog" src="./assets/santa-smog.svg" />
-      <h1 id="date">April,2024</h1>
-    </header>
-    <section id="banner">
-      <h2>5,000NGN for 10 PEOPLE</h2>
-    </section>
     <main class="container">
-      <section data-visible="true" id="intro">
-        <p>
-          I humbly beseech you to not see this platform as an avenue to get
-          ‘free’ money but kindly share it with someone who will truly need it.
-        </p>
+      <span id="food-pot">🥘</span>
+      <section data-visible="true" id="payment">
+        <dotlottie-player
+          id="confetti"
+          src="https://lottie.host/eb8f0bfa-19d6-4ff4-8df8-8b5105dedebe/HYkzZi9AGo.json"
+          background="transparent"
+          speed="1"
+          style="width: 100%; height: 100%"
+          loop
+          autoplay
+        ></dotlottie-player>
 
-        <p>
-          Please do not get greedy and attempt to outsmart the system by trying
-          to get paid multiple times.
-        </p>
-
-        <p>Lack of compliance might lead to total shutdown of the program.</p>
-
-        <p>Thank you for your cooperation.</p>
-        <form id="consent-form">
-          <div class="form-group row">
-            <input type="checkbox" id="agreement" required />
-            <label class="checkbox" for="agreement"
-              >I agree to all the terms stated above.</label
-            >
-          </div>
-          <button>Proceed</button>
-        </form>
-      </section>
-
-      <section data-visible="false" id="payment">
+        <header class="main-header">
+          <h1>Serve yourself</h1>
+          <p id="month-and-year">May 2024</p>
+        </header>
         <form id="bank-info-form">
           <div class="form-group">
-            <label for="bank-list">Your Bank</label>
+            <label for="bank-list">Bank Name</label>
             <select id="bank-list" required>
               <option value="">Kindly select your bank</option>
+              <option value="999992">
+                OPay Digital Services Limited (OPay)
+              </option>
+              <option value="999991">PalmPay</option>
+              <option value="044">Access Bank</option>
+              <option value="50211">Kuda Bank</option>
+              <option value="058">Guaranty Trust Bank</option>
+              <option value="058">Zenith Bank</option>
+              <option value="033">United Bank For Africa</option>
+              <option value="032">Union Bank of Nigeria</option>
+              <option value="076">Polaris Bank</option>
+              <option value="076">Providus Bank</option>
             </select>
           </div>
           <div class="form-group">
-            <label for="account-number">Your Account Number</label>
+            <label for="account-number">Account Number</label>
             <input
               type="text"
               required
               id="account-number"
               maxlength="10"
               disabled="disabled"
+              placeholder="Please select your bank"
+            />
+            <p class="form-group__message"></p>
+          </div>
+          <div class="form-group">
+            <label for="account-number">Email Address</label>
+            <input
+              type="email"
+              required
+              id="email-address"
+              placeholder="e.g buffet@aremusmog.com"
             />
           </div>
-          <div class="form-group row">
-            <input type="checkbox" required id="account-name" />
-            <label class="checkbox" for="account-name"
-              >My name is
-              <span id="user-account-name">Aremu Oluwagbamila</span></label
-            >
-          </div>
-          <button>Proceed</button>
+
+          <button id="proceed-to-pay" disabled>Proceed</button>
         </form>
+
+        <div id="banner"><p>All slots for this month taken</p></div>
       </section>
+      <aside>
+        <h2>
+          <span><span id="remaining-slots">10</span> Slots</span><br />
+          <span>&nbsp;&nbsp;&nbsp;&nbsp;5,000NGN</span>
+        </h2>
+      </aside>
     </main>
-    <footer class="container">
-      <p>Built with love in Ibadan</p>
+    <footer class="main-footer">
+      <p>
+        Built by
+        <a href="https://twitter.com/aremu_smog" target="_blank">Aremu Smog</a>
+        in Ibadan
+      </p>
     </footer>
   </body>
   <script src="./js/api.js"></script>
   <script src="./js/index.js"></script>
+  <script
+    src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+    type="module"
+  ></script>
 </html>
