website-feat: improve security and user experience

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -36,11 +36,12 @@
               <option value="044">Access Bank</option>
               <option value="50211">Kuda Bank</option>
               <option value="058">Guaranty Trust Bank</option>
-              <option value="058">Zenith Bank</option>
+              <option value="057">Zenith Bank</option>
               <option value="033">United Bank For Africa</option>
               <option value="032">Union Bank of Nigeria</option>
               <option value="076">Polaris Bank</option>
-              <option value="076">Providus Bank</option>
+              <option value="101">Providus Bank</option>
+              <option value="232">Sterling Bank</option>
             </select>
           </div>
           <div class="form-group">
@@ -52,6 +53,7 @@
               maxlength="10"
               disabled="disabled"
               placeholder="Please select your bank"
+              pattern="^\d{10}$"
             />
             <p class="form-group__message"></p>
           </div>
@@ -79,7 +81,7 @@
     </main>
     <footer class="main-footer">
       <p>
-        Built by
+        Designed & Built by
         <a href="https://twitter.com/aremu_smog" target="_blank">Aremu Smog</a>
         in Ibadan
       </p>
