website-feat: replace food plate emoji with image

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="container">
-      <span id="food-pot">🥘</span>
+      <img id="food-pot" src="./assets/food-plate.png" alt="Plate of food" />
       <section data-visible="true" id="payment">
         <dotlottie-player
           id="confetti"
