--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -94,6 +94,7 @@
 			</p>
 		</footer>
 	</body>
+	<script src="./js/home/index.js"></script>
 	<script src="./js/index.js"></script>
 	<script
 		src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
