website-feat: setup other pages

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -32,7 +32,7 @@
 
         <header class="main-header">
           <h1>Serve yourself</h1>
-          <p id="month-and-year">May 2024</p>
+          <p id="month-and-year"></p>
         </header>
         <form id="bank-info-form">
           <div class="form-group">
@@ -95,7 +95,8 @@
         </h2>
       </aside>
     </main>
-    <footer class="main-footer">
+    <nav class="main-navigation container" id="main-navigation"></nav>
+    <footer class="main-footer container">
       <p>
         Designed & Built by
         <a href="https://twitter.com/aremu_smog" target="_blank">Aremu Smog</a>
