feat: add preloader to each page

--- a/apps/website/contribute.html
+++ b/apps/website/contribute.html
@@ -64,6 +64,7 @@
         in Ibadan
       </p>
     </footer>
+    <div class="preloader" id="preloader"><p>Loading...</p></div>
   </body>
   <script src="./js/index.js"></script>
   <script
