--- a/apps/website/about.html
+++ b/apps/website/about.html
@@ -73,6 +73,7 @@
         in Ibadan
       </p>
     </footer>
+    <div class="preloader" id="preloader"><p>Loading...</p></div>
   </body>
   <script src="./js/index.js"></script>
   <script
