feat: update preloader

--- a/apps/website/contribute.html
+++ b/apps/website/contribute.html
@@ -64,7 +64,7 @@
         in Ibadan
       </p>
     </footer>
-    <div class="preloader" id="preloader"><p>Loading...</p></div>
+    <div class="preloader" id="preloader"><p>👨🏽‍🍳 Cooking...</p></div>
   </body>
   <script src="./js/index.js"></script>
   <script
