--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -103,7 +103,7 @@
         in Ibadan
       </p>
     </footer>
-    <div class="preloader" id="preloader"><p>Loading...</p></div>
+    <div class="preloader" id="preloader"><p>👨🏽‍🍳 Cooking...</p></div>
   </body>
   <script src="./js/home/index.js"></script>
   <script src="./js/index.js"></script>
