--- a/apps/website/contribute.html
+++ b/apps/website/contribute.html
@@ -66,7 +66,7 @@
     </footer>
     <div class="preloader" id="preloader"><p>👨🏽‍🍳 Cooking...</p></div>
   </body>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
   <script
     src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
     type="module"
